# TrainingCounter

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
devops/githooks/: pre-commit
scripts/: build_debug.sh
scripts/githooks/: install_githooks.bat  install_githooks.sh
src/: .clang-format  AppCore.cpp  AppCore.h  Core.cpp  Core.h  Counter.h  Counter.hpp  LexerParser.cpp  LexerParser.h  Logger.cpp  Logger.h  OutputManager.cpp  OutputManager.h  Parser.h  Save.cpp  Save.h  TaskManager.cpp  TaskManager.h  Tasks.cpp  Tasks.h  TrainingCounter.cpp  TrainingCounter.h  Version.h  Version.h.in  Version.hpp.in  iTask.h  main.cpp
src/Counter/: Counter.hpp
src/Counter/Save/: Save.h  Save.hpp
src/Logger/: Logger.cpp  Logger.h
src/TaskManager/: TaskManager.cpp  TaskManager.h
src/TaskManager/Task/: iTask.h
src/Version/: Version.h  Version.h.in
